# InnovFin

./: .env.example  .gitignore  .mcp.json  README.md  next.config.ts  package-lock.json  package.json
invoice-intelligence/: README.md  cli.py  gmail_filters.xml  pyproject.toml  requirements.txt
invoice-intelligence/attachments/: __init__.py  classifier.py  collector.py  models.py  registry.py
invoice-intelligence/canonical/: __init__.py  builder.py  models.py
invoice-intelligence/config/: attachments.yaml  dedup.yaml  detectors.yaml  doctype_detection.yaml  document_types.yaml  extraction.yaml  field_patterns.yaml  gmail_routing.yaml  invoice_keywords.yaml  invoice_patterns.yaml  labels.yaml  mailboxes.yaml  negative_keywords.yaml  query_engine.yaml  reason_catalog.yaml  routing_rules.yaml  score_weights.yaml  storage.yaml  trusted_vendors.yaml  validation.yaml  vendors.yaml
invoice-intelligence/core/: __init__.py  config.py  decision.py  detector.py  email_document.py  explanation.py  filter_engine.py  registry.py  scoring.py  signal.py  store.py
invoice-intelligence/dedup/: __init__.py  deduper.py  models.py
invoice-intelligence/detectors/: __init__.py  _helpers.py  attachment.py  auth.py  body.py  duplicate.py  negative.py  pattern.py  sender.py  subject.py  thread.py
invoice-intelligence/docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DOCTYPE_DETECTION.md  EXTRACTION.md  FUTURE_ROADMAP.md  GMAIL_LIVE_VALIDATION_PLAN.md  GMAIL_NATIVE_BEHAVIOUR.md  GMAIL_NATIVE_SETUP.md  GO_LIVE_TOMORROW.md  KNOWN_LIMITATIONS.md  MCP.md  PART1_DEPLOYMENT_VALIDATION.md  (+3 more)
(+382 files in other folders)
